--- a/templates/books/book_detail.html
+++ b/templates/books/book_detail.html
@@ -19,8 +19,12 @@
         </div>
     </section>
 
+    총 평점 : {{ review_aver|floatformat:1 }}
+    <hr>
+    
     {% for review in reviews %}
-        <p>평점 : {{ review.grade }} {{ review.body }}</p>
+        <p>{{ review.user }} 평점 : {{ review.grade }} {{ review.body }}</p>
+        <hr>
     {% endfor %}
 
     {% if can_review %}
