--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                 </div>
                 {% if request.user.is_authenticated %}
                 <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'books:my_rentals' %}">My Rental</a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">My Page</a>
+                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url "accounts:mypage" user.id %}">My Page</a>
                 {% endif %}
                 <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Menu1</a>
                 <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Menu2</a>
