추천 리스트 숫자 추가

--- a/templates/home.html
+++ b/templates/home.html
@@ -39,7 +39,7 @@
             <div class="p-2">
                 <h5>Recommend of {{ recommend_category }}</p></h5>
                 <hr>
-                <ol class="list-group">
+                <ol class="list-group list-group-numbered">
                     {% for title, grade in rank_books.items %}
                     <li class="list-group-item d-flex justify-content-between align-items-start">
                         <div class="ms-2 me-auto">
